2007-08-27  Paolo Borelli  <pborelli@katamail.com>

	* gtkosurceview2.defs: update to latest api changes.

2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gtkosurceview2.defs: update to latest api changes.

2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gtkosurceview2.defs: remove methods that do not exist anymore.

=== pygtksourceview 1.90.2 ===

2007-08-01  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* NEWS:

	pygtksourceview 1.90.3 released

2007-07-27  Paolo Borelli  <pborelli@katamail.com>

	* gtkosurceview2.defs: bind Buffer.ensure_highlight and
	language.get_hidden.

2007-07-17  Yevgen Muntyan  <muntyan at tamu dot edu>

	Mingw cross-compiling fixes and some cleanup.

	* acinclude.m4: MOO_AM_PYTHON_DEVEL_CROSS_MINGW macro to
	use when cross-compiling with mingw.

	* configure.ac:
	Use that macro; use '$PKG_CONFIG' instead of 'pkg-config';
	do not use -std=c9x gcc option, we do not do C99.

	* Makefile.am:
	require automake-1.9, not 1.7;
        use -no-undefined and -shrext ".pyd" on win32;
        call the library "gtksourceview2", not "gtksourceview2module".

2007-07-17  Paolo Borelli  <pborelli@katamail.com>

	* gtkosurceview2.defs: add get_description and get_filename
	to StyleScheme.

2007-07-16  Yevgen Muntyan  <muntyan at tamu dot edu>

	* tests/test-widget.py:
	Do not hardcode font size, just use "monospace".

	* gtksourceview2.defs:
	* gtksourceview2.override:
	API has changed once again.

=== pygtksourceview 1.90.2 ===

2007-07-03  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* NEWS:

	pygtksourceview 1.90.2 released

2007-07-03  Paolo Borelli  <pborelli@katamail.com>

	* gtkosurceview2module.c: the prefix for constants is GTK_SOURCE_
	not GTK_.

2007-06-27  Yevgen Muntyan  <muntyan@tamu.edu>

	* tests/test-widget.py
	* gtksourceview2.defs:
	* gtksourceview2.override (_wrap_gtk_source_style_manager_list_schemes,
	_wrap_gtk_source_language_manager_list_languages):
	API changed once again.
