@@ -1,5 +1,10 @@
 2007-08-27  Paolo Borelli  <pborelli@katamail.com>
 
+	* gtkosurceview2.defs: more api updates.
+	* test/test-widget.py: bring uptodate with api changes
+
+2007-08-27  Paolo Borelli  <pborelli@katamail.com>
+
 	* gtkosurceview2.defs: update to latest api changes.
 
 2007-08-25  Paolo Borelli  <pborelli@katamail.com>
